<resources>
    <string name="app_name">OnlineSpaceFinder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="create">Create Account</string>
    <string name="login_text">Please login your account</string>
    <string name="register">Register</string>
    <string name="register_text">Already have an account? Login</string>
    <string name="register_text2">Create your account here</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email Address</string>
    <string name="contact">Contact</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="details">Details</string>
    <string name="rent">Reserve</string>
    <string name="cancel">Cancel</string>
    <string name="spaceid">Space ID</string>
    <string name="owner">Owner</string>
    <string name="capacity">Capacity</string>
    <string name="date">Date Added</string>
    <string name="description">Space Description</string>
    <string name="location">Space at</string>
    <string name="search">Search</string>
    <string name="price_from">Price From</string>
    <string name="price_to">Price To</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="menu_reservation">Reservations</string>
    <string name="menu_history">Rent History</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_reservation">Reservations</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_password">Change Password</string>
    <string name="title_feedback">Feedbacks</string>
    <string name="title_my_feedback">My Feedbacks</string>
    <string name="title_history">Rent History</string>
    <string name="title_logout">Logout</string>
    <string name="title_space">Space</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="title_rates">Rates &amp; Reviews</string>
    <string name="reviews">Write your feedback here</string>
    <string name="logout">Logout</string>
    <string name="account_not_verified">Account Not Verified</string>
    <string name="account_not_verified_message">Please verify your account</string>

    <!-- Price From Dropdown -->
    <string-array name="Start">
        <item>Choose</item>
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
        <item>3500</item>
        <item>4000</item>
        <item>4500</item>
        <item>5000</item>
        <item>5500</item>
        <item>6000</item>
        <item>6500</item>
        <item>7000</item>
        <item>7500</item>
        <item>8000</item>
        <item>8500</item>
        <item>9000</item>
        <item>9500</item>
        <item>10000</item>
    </string-array>

    <!-- Price To Dropdown -->
    <string-array name="End">
        <item>Choose</item>
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
        <item>3500</item>
        <item>4000</item>
        <item>4500</item>
        <item>5000</item>
        <item>5500</item>
        <item>6000</item>
        <item>6500</item>
        <item>7000</item>
        <item>7500</item>
        <item>8000</item>
        <item>8500</item>
        <item>9000</item>
        <item>9500</item>
        <item>10000</item>
    </string-array>

    <!-- Types Dropdown -->
    <string-array name="Types">
        <item>Choose</item>
        <item>House</item>
        <item>Room</item>
        <item>Hotel</item>
        <item>Commercial Building</item>
        <item>Events Space</item>
    </string-array>

    <!-- house array -->
    <string-array name="house_array">
        <item>Choose</item>
        <item>1 Storey</item>
        <item>2 Storey</item>
        <item>3 Storey</item>
    </string-array>

    <!-- room array -->
    <string-array name="room_array">
        <item>Choose</item>
        <item>1 Bed</item>
        <item>2 Beds</item>
        <item>Double Deck Bed</item>
    </string-array>

    <!-- hotel array -->
    <string-array name="hotel_array">
        <item>Choose</item>
        <item>Single Bed</item>
        <item>Double Bed</item>
        <item>Triple Bed</item>
    </string-array>

    <!-- commercial array -->
    <string-array name="commercial_array">
        <item>Choose</item>
        <item>Office</item>
        <item>Industrial</item>
        <item>Multifamily</item>
    </string-array>

    <!-- events array -->
    <string-array name="event_array">
        <item>Choose</item>
        <item>Wedding</item>
        <item>Birthday Parties</item>
        <item>Debut</item>
    </string-array>
</resources>
