<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.password.PasswordFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                android:focusable="true"
                app:errorTextAppearance="@style/error_appearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/colorText"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/colorText"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/colorText"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_marginTop="16dp"
                android:background="@color/colorButtonLogin"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>